# NPCI-Switch-Engine

./: .gitignore  QUICKSTART.md  README.md  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml
.lock/: adr.md  api-spec.md  architecture.md  ard.md  design-api-events.md  design-data-model.md  design-docs-index.md  design-overview.md  design-runtime-ops.md  implementation-plan.md  npci-upi-system-architecture-and-simulator-blueprint.md  prd.md  runbook.md  security-threat-model.md  tech-stack.md  test-strategy.md
cmd/server/: main.go
internal/config/: config.go
internal/handlers/: payment.go
internal/services/: errors.go  payment.go  reconciliation.go  services_test.go
internal/state/: state.go  state_test.go
internal/storage/: db.go  migrate.go  seed.go
internal/types/: types.go
src/app/: config.py  database.py  models.py  schemas.py  state_machine.py
